# Rag_system_interview

./: task_summary.md
baseline_model/: README.md  config.json  rag_pipeline.py  (+1 more)
langchain_rag/: .gitignore  README.md  config.json  pyproject.toml
langchain_rag/experiments/: rerank_grid.json
langchain_rag/scripts/: __init__.py  run_rerank_experiments.py
langchain_rag/src/langchain_rag_app/: cli.py  core.py  retrieval.py
langchain_rag/src/langchain_rag_app/eval/: __init__.py  judge.py  metrics.py  normalizers.py
langchain_rag/tests/: test_cross_system_eval_pipeline.py  test_evaluator.py  test_experiments_runner.py  test_reranker_router.py  test_retrieval_pipeline.py
rag_demo/api/FastAPI_implementation/: .gitignore  README.md  pyproject.toml  requirements.txt
rag_demo/api/FastAPI_implementation/app/: main.py
rag_demo/api/FastAPI_implementation/app/api/v1/: rag.py
rag_demo/api/FastAPI_implementation/app/schemas/: rag.py
rag_demo/api/FastAPI_implementation/app/services/: rag_service.py
rag_demo/api/FastAPI_implementation/langchain_rag/: .env.example  .gitignore  README.md  config.json
rag_demo/api/FastAPI_implementation/langchain_rag/scripts/: run_rerank_experiments.py
rag_demo/api/FastAPI_implementation/langchain_rag/src/langchain_rag_app/: core.py  gate.py
rag_demo/api/FastAPI_implementation/langchain_rag/src/langchain_rag_app/eval/: __init__.py  aggregator.py  judge.py  llm_judge.py  normalizers.py  router.py  similarity.py
rag_demo/api/FastAPI_implementation/langchain_rag/tests/: test_evaluator.py  test_experiments_runner.py  test_gate.py  test_rerank_gain_metrics.py  test_semantic_pass_metrics.py  test_three_layer_eval.py
rag_demo/api/FastAPI_implementation/tests/: test_upload.py
(+45 files in other folders)
