[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "langchain-rag-app"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "langchain>=0.3.0",
  "langchain-openai>=0.2.0",
  "langchain-community>=0.3.0",
  "langchain-text-splitters>=0.3.0",
  "langchain-chroma>=0.1.0",
  "pypdf>=6.8.0",
  "python-dotenv>=1.0.1"
]

[project.scripts]
rag-index = "langchain_rag_app.cli:index_cmd"
rag-query = "langchain_rag_app.cli:query_cmd"
rag-eval = "langchain_rag_app.cli:eval_cmd"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
