[project]
name = "rag-demo-fastapi"
version = "0.1.0"
description = "FastAPI wrapper for langchain_rag in rag_demo"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
  "python-multipart>=0.0.9",
  "langchain-rag-app",
]

[tool.uv.sources]
langchain-rag-app = { path = "langchain_rag", editable = true }

[dependency-groups]
dev = [
  "pytest>=8.0.0",
  "httpx>=0.27.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
